--- a/fullstack-product/src/main/resources/templates/item.html
+++ b/fullstack-product/src/main/resources/templates/item.html
@@ -15,8 +15,8 @@
         <!--品牌官方网站-->
         <div class="min">
             <ul class="header_ul_left">
-                <li class="glyphicon glyphicon-home"><a href="static/item/shouye.html" class="aa">京东首页</a></li>
-                <li class="glyphicon glyphicon-map-marker"><a href="javascript:;">北京</a>
+                <li class="glyphicon glyphicon-home"><a href="static/item/shouye.html" class="aa">&nbsp;京东首页</a></li>
+                <li class="glyphicon glyphicon-map-marker"><a href="javascript:;">&nbsp;北京</a>
                     <ol id="beijing">
                         <li style="background: red;"><a href="javascript:;" style="color: white;">北京</a></li>
                         <li><a href="javascript:;">上海</a></li>
@@ -57,8 +57,15 @@
                 </li>
             </ul>
             <ul class="header_ul_right">
-                <li style="border: 0;"><a href="../登录页面\index.html" class="aa">你好，请登录</a></li>
-                <li><a href="../注册页面\index.html" style="color: red;">免费注册</a> |</li>
+                <li style="border: 10px;">
+                    <a th:if="${#strings.isEmpty(session.loginUser)}" href="http://auth.fsmall.com/login.html"
+                       class="aa">你好，请登录</a>
+                    <a th:if="${!#strings.isEmpty(session.loginUser)}"
+                       class="aa">欢迎：[[${session.loginUser.nickname}]]</a>
+                </li>
+                <li><a href="http://auth.fsmall.com/reg.html" style="color: red;"
+                       th:if="${#strings.isEmpty(session.loginUser)}">免费注册</a> |
+                </li>
                 <li><a href="javascript:;" class="aa">我的订单</a> |</li>
                 <li class="jingdong"><a href="javascript:;">我的京东</a><span class="glyphicon glyphicon-menu-down">|</span>
                     <ol class="jingdong_ol">
