--- a/fullstack-order/src/main/resources/templates/confirm.html
+++ b/fullstack-order/src/main/resources/templates/confirm.html
@@ -585,7 +585,7 @@
 <!--</div>-->
 <!--</div>-->
 <!--主体部分-->
-<p class="p1">填写并核对订单信息</p>
+<p class="p1">填写并核对订单信息 <span style="color:red" th:if="${msg!=null}" th:text="${msg}"></span></p>
 <div class="section">
     <!--收货人信息-->
     <div class="top-2">
@@ -594,8 +594,8 @@
     </div>
 
     <!--地址-->
-    <div class="top-3">
-        <p>家里</p><span>齐天大圣  北京市  昌平区城区晨曦小区-16号楼 吉利大学  150****2245</span>
+    <div class="top-3 addr-item" th:each="addr:${orderConfirmData.address}">
+        <p th:attr="def=${addr.defaultStatus},addrId=${addr.id}">[[${addr.name}]]</p><span>[[${addr.name}]]  [[${addr.province}]]  [[${addr.detailAddress}]] [[${addr.phone}]]</span>
     </div>
     <p class="p2">更多地址︾</p>
     <div class="hh1"/>
@@ -609,11 +609,6 @@
 </div>
 
 <!--地址-->
-<div class="top-5">
-    <p>北京昌平区</p><span>北京市  昌平区城区晨曦小区-16号楼 吉利大学  齐天大圣 150****2245</span><img
-        src="static/order/confirm/img/09.png"/><span>距收货人0米</span>
-    <p class="p3">距离最近</p><span class="xiu">修改自提点</span>
-</div>
 <div class="hh1"/>
 </div>
 
@@ -668,12 +663,13 @@
             <button>换购</button>
             <span>已购满20.00元，再加49.90元，可返回购物车领取赠品</span></div>
         <!--图片-->
-        <div class="yun1">
-            <img src="static/order/confirm/img/im_03.png" class="yun"/>
+        <div class="yun1" th:each="item:${orderConfirmData.items}">
+            <img th:src="${item.image}" class="yun"/>
             <div class="mi">
-                <p>小米（MI）小米手环2 智能运动 心率检测 来 <span style="color: red;"> ￥ 149.00</span> <span> x1 </span> <span>有货</span>
+                <p>[[${item.title}]] <span style="color: red;"> ￥ [[${#numbers.formatDecimal(item.price,3,2)}]]</span>
+                    <span> x[[${item.count}]] </span> <span>[[${orderConfirmData.stocks[item.skuId]?'有货':'无货'}]]</span>
                 </p>
-                <p>电提醒 久坐提醒 LED显示器 时间显示 防水记 <span>0.095kg</span></p>
+                <p>电提醒 久坐提醒 LED显示器 时间显示 防水记 <span>[[${item.weight}]]kg</span></p>
                 <p class="tui-1"><img src="static/order/confirm/img/i_07.png"/>支持7天无理由退货</p>
             </div>
         </div>
@@ -711,9 +707,9 @@
 <div class="xia">
     <div class="qian">
         <p class="qian_y">
-            <span>1</span>
+            <span>[[${orderConfirmData.count}]]</span>
             <span>件商品，总商品金额：</span>
-            <span class="rmb">￥28.90</span>
+            <span class="rmb">￥[[${orderConfirmData.total}]]</span>
         </p>
         <p class="qian_y">
             <span>返现：</span>
@@ -721,7 +717,7 @@
         </p>
         <p class="qian_y">
             <span>运费： </span>
-            <span class="rmb"> &nbsp ￥0.00</span>
+            <span class="rmb"> &nbsp ￥<b id="fareEle">0.00</b></span>
         </p>
         <p class="qian_y">
             <span>服务费： </span>
@@ -735,10 +731,18 @@
     </div>
 
     <div class="yfze">
-        <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥28.90</span></p>
-        <p class="yfze_b">寄送至： 北京 朝阳区 三环到四环之间 朝阳北路复兴国际大厦23层麦田房产 IT-中心研发二部 收货人：赵存权 188****5052</p>
+        <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥<b id="payPriceEle">[[${#numbers.formatDecimal(orderConfirmData.payPrice,3,2)}]]</b></span>
+        </p>
+        <p class="yfze_b">寄送至： <span id="receiveAddressEle"></span> 收货人：<span id="receiverEle"></span></p>
     </div>
-    <button class="tijiao">提交订单</button>
+    <form action="http://order.fsmall.com/submitOrder" method="post">
+        <input id="addrIdInput" type="hidden" name="addrId"/>
+        <input id="payTypeInput" type="hidden" name="payType" value="1"/>
+        <input id="payPriceInput" type="hidden" name="payPrice"/>
+        <input id="noteInput" type="hidden" name="note" value="默认备注"/>
+        <input type="hidden" name="orderToken" th:value="${orderConfirmData.orderToken}"/>
+        <button class="tijiao" type="submit">提交订单</button>
+    </form>
 </div>
 </div>
 
@@ -971,8 +975,42 @@
         }, function () {
             $('.h-r-1').css('display', 'none')
         })
+
+        highlight()
+        const addrId = $(".addr-item p[def=1]").attr("addrId");
+        queryFee(addrId);
     })
 
+    function highlight() {
+        $(".addr-item p").css({'border': '2px solid gray'});
+        $(".addr-item p[def=1]").css({'border': '2px solid red'});
+    }
+
+    $(".addr-item p").click(function () {
+        $(".addr-item p").attr("def", 0)
+        $(this).attr("def", 1);
+        highlight()
+        // 获取到当前地址的id
+        const addrId = $(this).attr("addrId");
+        queryFee(addrId);
+    })
+
+    function queryFee(addrId) {
+        $("#addrIdInput").val(addrId);
+        // 发送ajax获取运费信息
+        $.get("http://fsmall.com/api/ware/wareinfo/fare?addrId=" + addrId, function (data) {
+            console.log("==>", data)
+            $("#fareEle").text(data.data.fare);
+            var total = [[${orderConfirmData.payPrice}]];
+            // 设置运费
+            const allTotal = total * 1 + data.data.fare * 1;
+            $("#payPriceEle").text(allTotal);
+            $("#payPriceInput").val(allTotal);
+            // 设置收货人
+            $("#receiveAddressEle").text(data.data.address.province + data.data.address.city + data.data.address.region + data.data.address.detailAddress);
+            $("#receiverEle").text(data.data.address.name);
+        })
+    }
 
 </script>
 </body>
