--- a/fullstack-product/src/main/resources/templates/item.html
+++ b/fullstack-product/src/main/resources/templates/item.html
@@ -263,7 +263,7 @@
                 <div class="nav_top_two"><input type="text"/>
                     <button>搜索</button>
                 </div>
-                <div class="nav_top_three"><a href="../JD_Shop/One_JDshop.html">我的购物车</a><span
+                <div class="nav_top_three"><a href="http://cart.fsmall.com/cart.html">我的购物车</a><span
                         class="glyphicon glyphicon-shopping-cart"></span>
                     <div class="nav_top_three_1">
                         <img src="static/item/img/44.png"/>购物车还没有商品，赶紧选购吧！
