--- a/fullstack-product/src/main/resources/templates/item.html
+++ b/fullstack-product/src/main/resources/templates/item.html
@@ -516,8 +516,13 @@
                             <span>￥</span>
                             <span th:text="${#numbers.formatDecimal(item.info.price,3,2)}">4499.00</span>
                         </li>
-                        <li>
-                            预约享资格
+                        <li style="color:red" th:if="${item.seckillInfo!=null}">
+                            <span th:if="${#dates.createNow().getTime()<(item.seckillInfo.startTime)}">
+                            商品将会在：[[${#dates.format(new java.util.Date(item.seckillInfo.startTime), "yyyy-MM-dd HH:mm:ss")}]] 进行秒杀
+                            </span>
+                            <span th:if="${#dates.createNow().getTime()>=item.seckillInfo.startTime && #dates.createNow().getTime()<=item.seckillInfo.endTime}">
+                                秒杀价：[[${#numbers.formatDecimal(item.seckillInfo.seckillPrice,1,2)}]]
+                            </span>
                         </li>
                         <li>
                             <a href="">
@@ -639,7 +644,15 @@
 
                         </div>
                     </div>
-                    <div class="box-btns-two">
+                    <div class="box-btns-two"
+                         th:if="${item.seckillInfo!=null&&(#dates.createNow().getTime()>=item.seckillInfo.startTime && #dates.createNow().getTime()<=item.seckillInfo.endTime)}">
+                        <a href="#" id="seckill"
+                           th:attr="skuId=${item.info.skuId},promotionSessionId=${item.seckillInfo.promotionSessionId},code=${item.seckillInfo.randomCode}">
+                            立即抢购
+                        </a>
+                    </div>
+                    <div class="box-btns-two"
+                         th:if="${item.seckillInfo==null||(#dates.createNow().getTime()<item.seckillInfo.startTime || #dates.createNow().getTime()>item.seckillInfo.endTime)}">
                         <a href="#" id="addToCart" th:attr="skuId=${item.info.skuId}">
                             加入购物车
                         </a>
@@ -1561,6 +1574,19 @@
             var skuId = $(this).attr("skuId");
             var num = $("#numInput").val();
             window.location.href = "http://cart.fsmall.com/addToCart?skuId=" + skuId + "&num=" + num;
+            return false;
+        });
+        $("#seckill").click(function () {
+            var isLogin = [[${session.loginUser!=null}]]
+            if (isLogin) {
+                var killId = $(this).attr("promotionSessionId") + "_" + $(this).attr("skuId");
+                var key = $(this).attr("code");
+                var num = $("#numInput").val();
+                window.location.href = "http://seckill.fsmall.com/kill?killId=" + killId + "&key=" + key + "&num=" + num;
+                return false;
+            } else {
+                alert("秒杀请先登录！");
+            }
         });
     });
 </script>
